[package]
name = "tasker-worker-py"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Python FFI bindings for tasker-core worker"
repository = "https://github.com/tasker-systems/tasker-core"
license = "MIT"
keywords = ["ffi", "pyo3", "python", "tasker", "workflow"]
categories = ["api-bindings", "development-tools::ffi"]

# TAS-145: Ignore false positives from cargo-machete
[package.metadata.cargo-machete]
ignored = [
  # Used in FFI layer but not detected by analysis
  "anyhow",
  "chrono",
  "dotenvy",
  "serde",
  "serde_json",
]

[lib]
crate-type = ["cdylib"]
name = "_tasker_core"

[dependencies]
# Error handling
anyhow = { workspace = true }
# Time handling
chrono = { workspace = true }
# Environment variable loading
dotenvy = { workspace = true }
# PyO3 with extension-module feature for building Python extension
# Using abi3-py310 for stable ABI with minimum Python 3.10
pyo3 = { version = "0.27", features = ["abi3-py310", "extension-module"] }
pythonize = "0.27"
# Serialization for Python type conversion
serde = { workspace = true }
serde_json = { workspace = true }
tasker-shared = { path = "../../tasker-shared" }
# Workspace dependencies for worker integration
tasker-worker = { path = "../../tasker-worker" }
thiserror = { workspace = true }
# Async runtime (needed for FFI blocking)
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
# Logging
tracing = { workspace = true }
# UUID generation
uuid = { workspace = true }

[dev-dependencies]
pyo3 = { version = "0.27", features = ["auto-initialize"] }

[features]
default = []

[lints]
workspace = true
