[package]
name = "tasker-worker-rust"
version = "0.1.0"
edition = "2021"
description = "Native Rust worker demonstration for tasker-worker foundation"
authors = ["Pete Taylor <pete.jc.taylor@hey.com>"]

[dependencies]
# Core tasker dependencies
tasker-worker = { path = "../../tasker-worker" }
tasker-shared = { path = "../../tasker-shared" }
tasker-core = { path = "../../", package = "tasker-core" }

# Async runtime and utilities
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling and utilities
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Other utilities
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
# Testing utilities
tokio-test = { workspace = true }
tasker-orchestration = { path = "../../tasker-orchestration" }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }

[[bin]]
name = "rust-worker"
path = "src/main.rs"

[lib]
name = "tasker_worker_rust"
path = "src/lib.rs"
