[project]
name = "tasker-coverage-tools"
version = "0.1.0"
description = "Coverage normalization and aggregation tooling for tasker-core"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
normalize-rust = "normalize_rust:main"
normalize-python = "normalize_python:main"
normalize-ruby = "normalize_ruby:main"
normalize-typescript = "normalize_typescript:main"
aggregate = "aggregate:main"
check-thresholds = "check_thresholds:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
