[package]
name = "tasker_core_rb"
version = "0.1.0"
edition = "2021"
description = "Ruby bindings for tasker-core: High-performance workflow orchestration"
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "tasker_core_rb"

[dependencies]
# Async trait support for FrameworkIntegration
async-trait = { workspace = true }
# Time handling for Ruby Time ↔ Rust DateTime conversion
chrono = { workspace = true }
# Environment variable loading
dotenvy = { workspace = true }
# Ruby FFI
magnus = "0.7"
# Serde for serialization/deserialization
serde = { workspace = true }
# Serialization for Ruby ↔ Rust data conversion
serde_json = { workspace = true }
serde_magnus = "0.9"
serde_yaml = { workspace = true }
# Database (needed for PgPool)
sqlx = { workspace = true }
tasker-orchestration = { path = "../../../../tasker-orchestration" }
# Core library dependency (relative path to parent)
tasker-shared = { path = "../../../../tasker-shared" }
# Error handling
thiserror = { workspace = true }
# Async runtime for blocking on futures in FFI
tokio = { workspace = true, features = ["rt-multi-thread"] }
# Logging
tracing = { workspace = true }
# UUID generation for event bridge
uuid = { workspace = true }
# Project root detection
workspace_tools = { workspace = true }

[dev-dependencies]
tasker-core = { path = "../../../../", package = "tasker-core" }

[features]
default = []
