[package]
name = "tasker-worker-rb"
version = "0.1.0"
edition = "2021"
description = "Ruby bindings for tasker-core: High-performance workflow orchestration"
readme = "README.md"
repository = "https://github.com/tasker-systems/tasker-core"
license = "MIT"
keywords = ["bindings", "ffi", "magnus", "ruby", "worker"]
categories = ["api-bindings", "asynchronous"]

# TAS-145: Ignore false positives from cargo-machete
[package.metadata.cargo-machete]
ignored = [
  # Dev-dependencies
  "tasker-core",
  # Used in FFI layer but not detected by analysis
  "anyhow",
  "async-trait",
  "dotenvy",
  "once_cell",
  "serde_yaml",
  "sqlx",
  "thiserror",
  "workspace_tools",
]

[lib]
crate-type = ["cdylib"]
name = "tasker_worker_rb"

[dependencies]
anyhow = { workspace = true }
# Async trait support for FrameworkIntegration
async-trait = { workspace = true }
# Time handling for Ruby Time ↔ Rust DateTime conversion
chrono = { workspace = true }
# Environment variable loading
dotenvy = { workspace = true }
# Ruby FFI
magnus = { version = "0.8", features = ["embed"] }
# Once Cell
once_cell = { workspace = true }
# Serde for serialization/deserialization
serde = { workspace = true }
# Serialization for Ruby ↔ Rust data conversion
serde_json = { workspace = true }
serde_magnus = "0.10"
serde_yaml = { workspace = true }
# Database (needed for PgPool)
sqlx = { workspace = true }
# Core library dependency (relative path to parent)
tasker-shared = { path = "../../../../tasker-shared" }
tasker-worker = { path = "../../../../tasker-worker" }
# Error handling
thiserror = { workspace = true }
# Async runtime for blocking on futures in FFI
tokio = { workspace = true, features = ["rt-multi-thread"] }
# Logging
tracing = { workspace = true }
# UUID generation for event bridge
uuid = { workspace = true }
# Project root detection
workspace_tools = { workspace = true }

[dev-dependencies]
tasker-core = { package = "tasker-core", path = "../../../../" }

[features]
default = []

[lints]
workspace = true
